--- a/css/style.css
+++ b/css/style.css
@@ -106,13 +106,13 @@ border: 4px solid #1B263B;
     background: #df87eb;
 }
 #ral:hover{
-    background: #00a2ff;
+    background: #1136db;
 }
 #es:hover{
     background: #9b5795;
 }
 #dra:hover{
-    background: #ebae5f;
+    background: #ddcf11;
 }
 #sla:hover{
     background: #ebd7bd;
@@ -136,10 +136,10 @@ border: 4px solid #1B263B;
     background: #8d6948;
 }
 #az:hover{
-    background: #5a91d8;
+    background: #000000;
 }
 #col:hover{
-    background: #e100ff;
+    background: #f3b5fc;
 }
 #lux:hover{
     background: #000000;
