--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,32 @@ border: 4px solid #1B263B;
     cursor: pointer;
     transition: all 0.3s ease;
 }
+.div{
+    display: flex;
+}
+a{
+    border: none;
+    font-size: 16px;
+    color: #FFF;
+    padding: 8px 16px;
+    background-color: #1B263B;
+    border-radius: 6px;
+    margin: 14px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    text-decoration: none;
+}
+#a{
+    border: none;
+    font-size: 16px;
+    color: #1B263B;
+    padding: 7px 15px;
+    background-color: #ffffff;
+    border-radius: 6px;
+    margin: 14px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
 #um:hover{
     background: #67c2ce;
 }
